배열형데이터로 네비만들기

--- a/AgriCulture/assets/css/main.css
+++ b/AgriCulture/assets/css/main.css
@@ -48,7 +48,7 @@
   --background-color: #060606;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --accent-color: #2ea359;
+  --accent-color: #f7acbe;
   --surface-color: #252525;
   --contrast-color: #ffffff;
 }
